# trx8

./: ACTION.md  Cargo.toml  LICENSE  README.md  build.rs  config.example.json
src/: config.rs  constants.rs  logging.rs  main.rs
src/tools/: console.rs  mod.rs  subprocess.rs
src/utils/: mod.rs  nt.rs
